Refactor design of home page and its components

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,44 @@ a.active hr{
         color: white;
     }
   }
+
+  /* button */
+.btnForWhiteBg {
+  padding: 12px 25px;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #ffffff;
+  background: #EF233C;
+  border: 2px solid transparent;
+  border-radius: 0;
+  box-shadow: inset 0 0 0 50px #EF233C;
+  transition: ease-in 0.3s;
+}
+
+.btnForWhiteBg:hover {
+  color: #EF233C;
+  background: transparent;
+  box-shadow: inset 0 0 0 0 #EF233C;
+  border-color: #EF233C;
+}
+
+.btnForRedBg {
+  padding: 12px 25px;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #EF233C;
+  background: #ffffff ;
+  border: 2px solid transparent;
+  border-radius: 0;
+  box-shadow: inset 0 0 0 50px #ffffff;
+  transition: ease-in 0.3s;
+}
+
+.btnForRedBg:hover {
+  color: #ffffff;
+  background: transparent;
+  box-shadow: inset 0 0 0 0 #ffffff;
+  border-color: #ffffff;
+}
